--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "portable-game-boards",
   "version": "0.1.0",
+  "homepage": "https://hugomencoboni.github.io/portable-game-boards",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
